Description
compname-fix.patch![]()
This patch reduces one failure of shlwapi_apitest:PathUnExpandEnvStrings.
The screenshots: compname-before.png
, compname-after.png
.
compname-fix.patch![]()
This patch reduces one failure of shlwapi_apitest:PathUnExpandEnvStrings.
The screenshots: compname-before.png
, compname-after.png
.