[SHLWAPI] Cherry-pick Wine commit 7be8beab68c (Don't attempt to un-expect ComputerName in PathUnExpandEnvStrings) by Katayama Hirofumi MZ. CORE-13816